--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sceneify/animation": "^0.0.0-main-d976bf22",
-    "@sceneify/core": "^0.0.0-main-d976bf22",
-    "@sceneify/filters": "^0.0.0-main-d976bf22",
-    "@sceneify/sources": "^0.0.0-main-d976bf22",
+    "@sceneify/animation": "0.0.0-main-b1bab269",
+    "@sceneify/core": "0.0.0-main-b1bab269",
+    "@sceneify/filters": "0.0.0-main-b1bab269",
+    "@sceneify/sources": "0.0.0-main-b1bab269",
     "dotenv": "^16.0.2",
     "fastify": "^4.6.0"
   },
